<resources>
    <string name="app_name">IV</string>
    <string name="enter_valid_number">Please enter valid mobile number</string>
    <string name="enter_valid_code">Please enter valid code</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile">Mobile</string>
    <string name="terms_and_conditions"><![CDATA[By registering, you accept our Terms & Conditions]]></string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="open_close">Open/Close</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="address">Address</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="favourite">Favourite</string>
    <string name="dashboard">Dashboard</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="registration">Registration</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_store">Store</string>
    <string name="are_you_sure_you_want_to_exist">Are you sure you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vegitables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="dairy_products">Dairy Products</string>
    <string name="general_store">General Store</string>
    <string name="area">Area</string>
    <string name="type">Type</string>
    <string name="proucts">Products</string>
    <string name="timing">Timing : </string>
    <string name="to">To</string>
    <string name="morning_time">Morning time</string>
    <string name="evening_time">Evening time</string>
    <string name="getting_data">Getting data</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel </string>
    <string name="vehicle">Vehicle</string>
    <string name="dairyproducts">DairyProducts</string>
    <string name="generalstore">GeneralStore</string>
    <string name="title_logout">Logout</string>
    <string name="shop_status">Shop Status : </string>
    <string name="city_state">City - State</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
</resources>
