<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_shop_logo"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_gravity="center"
                    android:padding="@dimen/dp_8"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_shop_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/shop_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/mobile"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/address" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dp_8"
                    app:srcCompat="@drawable/ic_add_location_black_24dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_area"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/area" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/state" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/city" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/pincode"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_4"
                    android:text="@string/type"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/open" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/close" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:paddingLeft="@dimen/dp_4"
                    android:text="@string/proucts"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_vegetables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_veggies_border" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/vegitables" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_fruits"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fruits_border" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/fruits" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dairy_products"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_dairy_border" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/dairy_products" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_general_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_8"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp_48"
                            android:layout_height="@dimen/dp_48"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_general_store_border" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/general_store" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timing"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_morning_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/morning_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_8"
                    android:text="@string/to" />

                <EditText
                    android:id="@+id/ed_evening_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/evening_time" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>